sn-development-k8s/web/deployment-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sn-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sn-fe
  template:
    metadata:
      labels:
        app: sn-fe
    spec:
      containers:
        - name: sn-fe
          image: registry.emso.vn/sn-fe:0.3.23
          # resources:
          #   requests:
          #     cpu: "2"     
          #     memory: "1.5Gi"
          resources:
            requests:
              cpu: "0.5"
              memory: 700Mi
            limits:
              cpu: "2.5"
              memory: 2Gi
          ports:
            - name: fe
              containerPort: 3000
      imagePullSecrets:
        - name: registry # Tên secret đã tạo
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: magnum.openstack.org/nodegroup
      #               operator: In
      #               values:
      #                 - ng-chat
