sn-development-k8s/web/deployment-media.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sn-media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sn-media
  template:
    metadata:
      labels:
        app: sn-media
    spec:
      containers:
        - name: sn-media
          image: quoiwowai/sn-web
          # resources:
          #   requests:
          #     cpu: "1.5"     
          #     memory: "2.5Gi"
          resources:
            requests:
              cpu: "0.5"
              memory: 700Mi
            limits:
              cpu: "2.5"
              memory: 2Gi
          ports:
            - name: media
              containerPort: 3000
      # imagePullSecrets:
      #   - name: registry # Tên secret đã tạo
      # nodeSelector:
      #   magnum.openstack.org/nodegroup: ng-media
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: magnum.openstack.org/nodegroup
      #               operator: In
      #               values:
      #                 - ng-web
