sn-development-k8s/web/deployment-streaming.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sn-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sn-streaming
  template:
    metadata:
      labels:
        app: sn-streaming
    spec:
      containers:
        - name: sn-streaming
          image:  quoiwowai/sn-web
          command: ["node", "./streaming"]
          # resources:
          #   requests:
          #     cpu: "1.5"     
          #     memory: "2.5Gi"
          resources:
            requests:
              cpu: "0.5"
              memory: 700Mi
            limits:
              cpu: "2.5"
              memory: 2Gi
          ports:
            - name: streaming
              containerPort: 4000
      imagePullSecrets:
        - name: registry # Tên secret đã tạo
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: magnum.openstack.org/nodegroup
      #               operator: In
      #               values:
      #                 - ng-chat
