sn-development-k8s/web/deployment-third-party.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sn-third-party
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sn-third-party
  template:
    metadata:
      labels:
        app: sn-third-party
    spec:
      containers:
        - name: sn-third-party
          image: quoiwowai/third-party
          # resources:
          #   requests:
          #     cpu: "1.5"     
          #     memory: "2.5Gi"
          resources:
            requests:
              cpu: "0.5"
              memory: 700Mi
            limits:
              cpu: "1.5"
              memory: 2Gi
          ports:
            - name: third-party
              containerPort: 5000
      imagePullSecrets:
        - name: registry # Tên secret đã tạo
      # nodeSelector:
      #   magnum.openstack.org/nodegroup: ng-media
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: magnum.openstack.org/nodegroup
      #               operator: In
      #               values:
      #                 - ng-web
