sn-development-k8s/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sn-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sn-web
  template:
    metadata:
      labels:
        app: sn-web
    spec:
      containers:
        - name: sn-web
          image: quoiwowai/sn-web
          # resources:
          #   requests:
          #     cpu: "2.5"     
          #     memory: "1.5Gi"
          resources:
            requests:
              cpu: "0.5"
              memory: 1.0Gi
            limits:
              cpu: "2.5"
              memory: 2.5Gi
          ports:
            - name: web
              containerPort: 3000
      imagePullSecrets:
        - name: registry # Tên secret đã tạo
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: magnum.openstack.org/nodegroup
      #               operator: In
      #               values:
      #                 - ng-web
