sn-development-k8s/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sn-web
  # annotations:
  #   metallb.universe.tf/allow-shared-ip: secret
spec:
  selector:
    app: sn-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
  type: LoadBalancer
  # externalTrafficPolicy: Cluster
  # externalTrafficPolicy: Local
  # loadBalancerIP: 172.16.0.66
# ---
# #sn-web-hpa.yaml 
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: sn-web-deployment
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment     # Áp dụng HPA cho Deployment
#     name: sn-web
#   minReplicas: 1   # Số pod scale nhỏ nhất
#   maxReplicas: 10  # Số pod scale lớn nhất
# behavior:
#     scaleDown:
#       stabilizationWindowSeconds: 300
#       policies:
#       - type: Pods
#         value: 4
#         periodSeconds: 60
#     scaleUp:
#       stabilizationWindowSeconds: 60
#       policies:
#       - type: Pods
#         value: 2
#         periodSeconds: 60
# metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 60
  
#     - type: Resource
#       resource:
#         name: memory
#         target:
#           type: Utilization
#           averageUtilization: 60
