sn-development-k8s/web/ingress-marketplace.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
    cert-manager.io/cluster-issuer: letsencrypt-sn-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cmc-marketplace.emso.vn
    secretName: sn-marketplace-tls-secret
  rules:
  - host: cmc-marketplace.emso.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sn-marketplace
            port:
              name: https
