sn-development-k8s/web/ingress-media.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - emso-media.emso.vn
    secretName: sn-media-tls-secret
  rules:
  - host: emso-media.emso.vn
    http:
      paths:
      - path: /api/v1/media
        pathType: Prefix
        backend:
          service:
            name: sn-media
            port:
              name: https
